--- a/about.html
+++ b/about.html
@@ -43,6 +43,11 @@ Many friends have asked for the ability to download all the books in this librar
        <td><center><b>Date</b></center></td>
 </tr>
 <tr>
+       <td>1.8.0</td>
+       <td>Addition of <i>Prayers and Meditations</i></td>
+       <td>September 2019</td>
+</tr>
+<tr>
        <td>1.7.0</td>
        <td>Addition of <i>Tablets of Bahá'u'lláh</i></td>
        <td>September 2018</td>
