--- a/index.html
+++ b/index.html
@@ -24,6 +24,8 @@
 
 <h3><a href="Baha'i/Baha/KI/Cover.html">The Kitáb-i-Íqán</a></h3>
 
+<h3><a href="Baha'i/Baha/PM/Cover.html">Prayers and Meditations</a></h3>
+
 <h3><a href="Baha'i/Baha/TSVATFV.html">The Seven Valleys and The Four Valleys</a></h3>
 
 <h3><a href="Baha'i/Baha/TOB/Cover.html">Tablets of Bahá'u'lláh</a></h3>
@@ -45,6 +47,6 @@
 <h3><font color="#bd1a03"><a href="download.html">Download Center</a></font></h3>
 
 <br><br>
-<small><p><i>The Covenant Library</i>, version 1.7.0.<p><p>
+<small><p><i>The Covenant Library</i>, version 1.8.0.<p><p>
 </body>
 </html>
