--- a/about.html
+++ b/about.html
@@ -25,7 +25,7 @@ This allows the reader to read the main text of the book in an HTML browser, uni
 Items <span style="background-color: #ffffCC" TITLE="emphasized or made prominent">highlighted</span> can be hovered over for a quick definition.  For best results of this function, please use desktop versions of Firefox or Chrome browsers.
 
 <p>
-Many thanks to the friends who have proof-read the contents of this library to ensure the integrity of the works contained therein.
+A big thank you to the friends who have proof-read the contents of this library to ensure the integrity of the works contained therein.
 
 <p><b>
 Many friends have asked for the ability to download all the books in this library for off-line use...I have asked the publishers for this permission but have not been able to secure it. Therefore, the only way to access this library is on-line at this time.  If the situation changes, I will eagerly provide a link for the download of the entire library for off-line use.
@@ -41,6 +41,11 @@ Many friends have asked for the ability to download all the books in this librar
        <td><center><b>Version</b></center></td>
        <td><center><b>Description</b></center></td>
        <td><center><b>Date</b></center></td>
+</tr>
+<tr>
+       <td>1.9.0</td>
+       <td>Addition of <i>Some Answered Questions</i></td>
+       <td>January 2020</td>
 </tr>
 <tr>
        <td>1.8.0</td>
