--- a/index.html
+++ b/index.html
@@ -10,43 +10,48 @@
 <h1><center>The Covenant Library</center></h1>
 <center><i>"...immerse yourselves in this Ocean<br>in whose depths lay hidden<br>the pearls of wisdom and of utterance..."</i> <br><small>--Bahá'u'lláh</small></center>
 <h2><center>Table of Contents</center></h2>
-<h4><a href="about.html">About</a></h4>
+
+<h3><b><i>Bahá'u'lláh</i></b></h3>
+			<blockquote>
+			<h4><a href="Baha'i/Baha/EW/Cover.html">Epistle to the Son of the Wolf</a></h4>
+
+			<h4><a href="Baha'i/Baha/GL/Cover.html">Gleanings From The Writings Of Bahá'u'lláh</a></h4>
+
+			<h4><a href="Baha'i/Baha/HiddenWords.html">The Hidden Words of Bahá'u'lláh</a></h4>
+
+			<h4><a href="Baha'i/Baha/KA/Cover.html">The Kitáb-i-Aqdas</a></h4>
+
+			<h4><a href="Baha'i/Baha/KI/Cover.html">The Kitáb-i-Íqán</a></h4>
+
+			<h4><a href="Baha'i/Baha/PM/Cover.html">Prayers and Meditations</a></h4>
+
+			<h4><a href="Baha'i/Baha/TSVATFV.html">The Seven Valleys and The Four Valleys</a></h4>
+
+			<h4><a href="Baha'i/Baha/TOB/Cover.html">Tablets of Bahá'u'lláh</a></h4>
+			</blockquote>
+
+<h3><b><i>'Abu'l-Bahá</i></b></h3>
+			<blockquote>
+			<h4><a href="Baha'i/AB/SAQ/Cover.html">Some Answered Questions</a></h4>
+			</blockquote>
+
+<h3><b><i>Others</i></b></h3>
+			<blockquote>
+			<h4>Adib Taherzadeh: The Revelation of Bahá'u'lláh</h4>
+					<blockquote><h4>
+							<a href="Baha'i/Others/ROB/V1/Cover.html">Volume 1: Baghdad 1853-63</a><br>
+							<a href="Baha'i/Others/ROB/V2/Cover.html">Volume 2: Adrianople 1863-68</a><br>
+							<a href="Baha'i/Others/ROB/V3/Cover.html">Volume 3: Akka, The Early Years 1868-77</a><br>
+							<a href="Baha'i/Others/ROB/V4/Cover.html">Volume 4: Mazra'ih & Bahjí 1877-92</a><br>
+					</h3></blockquote>
+			</blockquote>
 
 <h4><a href="search.html">Search</a></h4>
 
-<h3><a href="Baha'i/Baha/EW/Cover.html">Epistle to the Son of the Wolf</a></h3>
+<h4><font color="#bd1a03"><a href="download.html">Download Center</a></font></h4>
 
-<h3><a href="Baha'i/Baha/GL/Cover.html">Gleanings From The Writings Of Bahá'u'lláh</a></h3>
+<h4><a href="about.html">About</a></h4>
 
-<h3><a href="Baha'i/Baha/HiddenWords.html">The Hidden Words of Bahá'u'lláh</a></h3>
-
-<h3><a href="Baha'i/Baha/KA/Cover.html">The Kitáb-i-Aqdas</a></h3>
-
-<h3><a href="Baha'i/Baha/KI/Cover.html">The Kitáb-i-Íqán</a></h3>
-
-<h3><a href="Baha'i/Baha/PM/Cover.html">Prayers and Meditations</a></h3>
-
-<h3><a href="Baha'i/Baha/TSVATFV.html">The Seven Valleys and The Four Valleys</a></h3>
-
-<h3><a href="Baha'i/Baha/TOB/Cover.html">Tablets of Bahá'u'lláh</a></h3>
-
-<br>
-<br>
-
-<h3>The Revelation of Bahá'u'lláh</h3>
-<blockquote><h3>
-			<a href="Baha'i/Others/ROB/V1/Cover.html">Volume 1: Baghdad 1853-63</a><br>
-			<a href="Baha'i/Others/ROB/V2/Cover.html">Volume 2: Adrianople 1863-68</a><br>
-			<a href="Baha'i/Others/ROB/V3/Cover.html">Volume 3: Akka, The Early Years 1868-77</a><br>
-			<a href="Baha'i/Others/ROB/V4/Cover.html">Volume 4: Mazra'ih & Bahjí 1877-92</a><br>
-</h3></blockquote>
-
-<br>
-
-
-<h3><font color="#bd1a03"><a href="download.html">Download Center</a></font></h3>
-
-<br><br>
-<small><p><i>The Covenant Library</i>, version 1.8.0.<p><p>
+<small><p><i>The Covenant Library</i>, version 1.9.0.<p><p>
 </body>
 </html>
