--- a/Baha'i/Baha/EW/p195-197Index.html
+++ b/Baha'i/Baha/EW/p195-197Index.html
@@ -49,7 +49,7 @@
 	   <a name="Báb">Báb</a>, prophecies concerning Bahá'u'lláh, <a href= "../EW/p001-182.html#p141">141</a>, <a href= "../EW/p001-182.html#p142">142</a>, <a href= "../EW/p001-182.html#p151">151</a>, <a href= "../EW/p001-182.html#p152">152</a>, <a href= "../EW/p001-182.html#p153">153</a>, <a href= "../EW/p001-182.html#p154">154</a>, <a href= "../EW/p001-182.html#p155">155</a>, <a href= "../EW/p001-182.html#p156">156</a>, <a href= "../EW/p001-182.html#p157">157</a>, <a href= "../EW/p001-182.html#p159">159</a>, <a href= "../EW/p001-182.html#p162">162</a>,
 	   				   			  			   <a href= "../EW/p001-182.html#p165">165</a>, <a href= "../EW/p001-182.html#p167">167</a>, <a href= "../EW/p001-182.html#p168">168</a>, <a href= "../EW/p001-182.html#p171">171</a>, <a href= "../EW/p001-182.html#p173">173</a>, <a href= "../EW/p001-182.html#p175">175</a>, <a href= "../EW/p001-182.html#p176">176</a>, <a href= "../EW/p001-182.html#p177">177</a> <p>
 	   Baghdád, <a href= "../EW/p001-182.html#p166">166</a>, <a href= "../EW/p001-182.html#p167">167</a>, <a href= "../EW/p001-182.html#p176">176</a> <p>
-	   Bahá'u'lláh, <p>
+	   <a name="Bahá'u'lláh">Bahá'u'lláh</a>, <p>
 	      <blockquote>
 		  			  courage, <a href= "../EW/p001-182.html#p85">85</a>, <a href= "../EW/p001-182.html#p87">87</a> <p>
 					  detachment, <a href= "../EW/p001-182.html#p36">36</a>, <a href= "../EW/p001-182.html#p37">37</a>, <a href= "../EW/p001-182.html#p41">41</a>, <a href= "../EW/p001-182.html#p44">44</a>, <a href= "../EW/p001-182.html#p59">59</a> <p>
@@ -147,7 +147,7 @@
 	   Mercy, <a href= "../EW/p001-182.html#p29">29</a>, <a href= "../EW/p001-182.html#p55">55</a>, <a href= "../EW/p001-182.html#p78">78</a>
 	      <blockquote>of God, <a href= "../EW/p001-182.html#p6">6</a>, <a href= "../EW/p001-182.html#p8">8</a>, <a href= "../EW/p001-182.html#p9">9</a>, <a href= "../EW/p001-182.html#p25">25</a>, <a href= "../EW/p001-182.html#p46">46</a>, <a href= "../EW/p001-182.html#p54">54</a>, <a href= "../EW/p001-182.html#p133">133</a>, <a href= "../EW/p001-182.html#p147">147</a>, <a href= "../EW/p001-182.html#p151">151</a></blockquote>
 	   Monks, <a href= "../EW/p001-182.html#p49">49</a> <p>
-	   Moses, <a href= "../EW/p001-182.html#p41">41</a>, <a href= "../EW/p001-182.html#p52">52</a>, <a href= "../EW/p001-182.html#p64">64</a>, <a href= "../EW/p001-182.html#p65">65</a>, <a href= "../EW/p001-182.html#p66">66</a>, <a href= "../EW/p001-182.html#p86">86</a>, <a href= "../EW/p001-182.html#p117">117</a>, <a href= "../EW/p001-182.html#p118">118</a> <p>
+	   <a name="Moses">Moses</a>, <a href= "../EW/p001-182.html#p41">41</a>, <a href= "../EW/p001-182.html#p52">52</a>, <a href= "../EW/p001-182.html#p64">64</a>, <a href= "../EW/p001-182.html#p65">65</a>, <a href= "../EW/p001-182.html#p66">66</a>, <a href= "../EW/p001-182.html#p86">86</a>, <a href= "../EW/p001-182.html#p117">117</a>, <a href= "../EW/p001-182.html#p118">118</a> <p>
 	   <a name="Muhammad">Muhammad</a>, <a href= "../EW/p001-182.html#p42">42</a>, <a href= "../EW/p001-182.html#p43">43</a>, <a href= "../EW/p001-182.html#p52">52</a>, <a href= "../EW/p001-182.html#p81">81</a>, <a href= "../EW/p001-182.html#p92">92</a>, <a href= "../EW/p001-182.html#p99">99</a>, <a href= "../EW/p001-182.html#p104">104</a>, <a href= "../EW/p001-182.html#p107">107</a> <p>
 	      <blockquote>prophecies of, <a href= "../EW/p001-182.html#p178">178</a>-181</blockquote>
 	   Napoleon III of France, Tablet to <a href= "../EW/p001-182.html#p45">45</a>-56, <a href= "../EW/p001-182.html#p124">124</a>-5
