--- a/Baha'i/Baha/GL/Index.html
+++ b/Baha'i/Baha/GL/Index.html
@@ -47,7 +47,7 @@
 	<small>
 'Abdu 'l-'Aziz, Sultán, Tablet to, <a href= "../GL/p003-346.html#para465">232</a>-240<p>
 'Abdu'lláh-i-Ubayy, <a href= "../GL/p003-346.html#p25">25</a>, <a href= "../GL/p003-346.html#p83">83</a><p>
-Abraham, <a href= "../GL/p003-346.html#p57">57</a>, <a href= "../GL/p003-346.html#p75">75</a>, <a href= "../GL/p003-346.html#p173">173</a><p>
+<a name="Abraham">Abraham</a>, <a href= "../GL/p003-346.html#p57">57</a>, <a href= "../GL/p003-346.html#p75">75</a>, <a href= "../GL/p003-346.html#p173">173</a><p>
 Abú 'Amír, <a href= "../GL/p003-346.html#p25">25</a><p>
 Acquiescence, <a href= "../GL/p003-346.html#p133">133</a>, <a href= "../GL/p003-346.html#p290">290</a>, <a href= "../GL/p003-346.html#p299">299</a><p>
 Adam, <a href= "../GL/p003-346.html#p51">51</a>, <a href= "../GL/p003-346.html#p74">74</a>, <a href= "../GL/p003-346.html#p172">172</a>, <a href= "../GL/p003-346.html#p173">173</a>, <a href= "../GL/p003-346.html#p258">258</a><p>
@@ -66,7 +66,7 @@ Arts, source of, <a href= "../GL/p003-346.html#p85">85</a>, <a href= "../GL/p003
 Ashraf, mother of, <a href= "../GL/p003-346.html#p135">135</a><p>
 Atom, <a href= "../GL/p003-346.html#p16">16</a>, <a href= "../GL/p003-346.html#p177">177</a>, <a href= "../GL/p003-346.html#p192">192</a>, <a href= "../GL/p003-346.html#p267">267</a>, <a href= "../GL/p003-346.html#p300">300</a>, <a href= "../GL/p003-346.html#p324">324</a>, <a href= "../GL/p003-346.html#p325">325</a><p>
 Attacks on Cause to be refuted, <a href= "../GL/p003-346.html#p329">329</a>, <a href= "../GL/p003-346.html#p330">330</a><p>
-Báb ('Alí-Muhammad), <a href= "../GL/p003-346.html#p73">73</a>, <a href= "../GL/p003-346.html#p74">74</a>, <a href= "../GL/p003-346.html#p101">101</a>; <a href= "../GL/p003-346.html#p102">102</a>, <a href= "../GL/p003-346.html#p259">259</a><p>
+<a name="Báb">Báb</a> ('Alí-Muhammad), <a href= "../GL/p003-346.html#p73">73</a>, <a href= "../GL/p003-346.html#p74">74</a>, <a href= "../GL/p003-346.html#p101">101</a>; <a href= "../GL/p003-346.html#p102">102</a>, <a href= "../GL/p003-346.html#p259">259</a><p>
 <blockquote>
 	Ancient Beauty, <a href= "../GL/p003-346.html#p77">77</a><p>
 	Covenant of, <a href= "../GL/p003-346.html#p147">147</a><p>
@@ -586,14 +586,14 @@ Mind (see <a href="Index.html#Man">Man</a>) <p>
 Minister to Sháh, Tablet to, <a href= "../GL/p003-346.html#p219">219</a>-231<p>
 Miracle requested from Bahá'u'lláh, <a href= "../GL/p003-346.html#p131">131</a><p>
 Moderation, <a href= "../GL/p003-346.html#p216">216</a>, <a href= "../GL/p003-346.html#p235">235</a>, <a href= "../GL/p003-346.html#p251">251</a>, <a href= "../GL/p003-346.html#p342">342</a>, <a href= "../GL/p003-346.html#p343">343</a><p>
-Moses, <a href= "../GL/p003-346.html#p20">20</a>, <a href= "../GL/p003-346.html#p23">23</a>, <a href= "../GL/p003-346.html#p51">51</a>, <a href= "../GL/p003-346.html#p57">57</a>, <a href= "../GL/p003-346.html#p62">62</a>, <a href= "../GL/p003-346.html#p88">88</a>, <a href= "../GL/p003-346.html#p221">221</a>, <a href= "../GL/p003-346.html#p270">270</a><p>
+<a name="Moses">Moses</a>, <a href= "../GL/p003-346.html#p20">20</a>, <a href= "../GL/p003-346.html#p23">23</a>, <a href= "../GL/p003-346.html#p51">51</a>, <a href= "../GL/p003-346.html#p57">57</a>, <a href= "../GL/p003-346.html#p62">62</a>, <a href= "../GL/p003-346.html#p88">88</a>, <a href= "../GL/p003-346.html#p221">221</a>, <a href= "../GL/p003-346.html#p270">270</a><p>
 <blockquote>
 	opposition to, <a href= "../GL/p003-346.html#p19">19</a><p>
 </blockquote>
 Most Great Name, power of, <a href= "../GL/p003-346.html#p28">28</a>, <a href= "../GL/p003-346.html#p34">34</a>, <a href= "../GL/p003-346.html#p121">121</a>, <a href= "../GL/p003-346.html#p189">189</a>, <a href= "../GL/p003-346.html#p242">242</a>, <a href= "../GL/p003-346.html#p286">286</a>, <a href= "../GL/p003-346.html#p333">333</a><p>
 Most Great Peace, <a href= "../GL/p003-346.html#p249">249</a>, <a href= "../GL/p003-346.html#p254">254</a><p>
 Mount Carmel, <a href= "../GL/p003-346.html#p14">14</a>, <a href= "../GL/p003-346.html#p15">15</a>, <a href= "../GL/p003-346.html#p16">16</a>, <a href= "../GL/p003-346.html#p211">211</a><p>
-Muhammad, <a href= "../GL/p003-346.html#p51">51</a>, <a href= "../GL/p003-346.html#p67">67</a>, <a href= "../GL/p003-346.html#p69">69</a>, <a href= "../GL/p003-346.html#p76">76</a>, <a href= "../GL/p003-346.html#p77">77</a>, <a href= "../GL/p003-346.html#p83">83</a>, <a href= "../GL/p003-346.html#p101">101</a>, <a href= "../GL/p003-346.html#p102">102</a>, <a href= "../GL/p003-346.html#p270">270</a><p>
+<a name="Muhammad">Muhammad</a>, <a href= "../GL/p003-346.html#p51">51</a>, <a href= "../GL/p003-346.html#p67">67</a>, <a href= "../GL/p003-346.html#p69">69</a>, <a href= "../GL/p003-346.html#p76">76</a>, <a href= "../GL/p003-346.html#p77">77</a>, <a href= "../GL/p003-346.html#p83">83</a>, <a href= "../GL/p003-346.html#p101">101</a>, <a href= "../GL/p003-346.html#p102">102</a>, <a href= "../GL/p003-346.html#p270">270</a><p>
 <blockquote>
 	afflictions of, <a href= "../GL/p003-346.html#p24">24</a>, <a href= "../GL/p003-346.html#p25">25</a><p>
 	oneness with Christ, <a href= "../GL/p003-346.html#p21">21</a><p>
