--- a/Baha'i/Baha/KA/p019-088Aqdas.html
+++ b/Baha'i/Baha/KA/p019-088Aqdas.html
@@ -51,7 +51,9 @@
 		 <a name="p19"></a>THE FIRST DUTY prescribed by God for His servants is the recognition of Him Who is the Dayspring of His Revelation and the Fountain of His laws, Who representeth the Godhead in both the Kingdom of His Cause and the world of creation. Whoso achieveth this duty hath attained unto all good; and whoso is deprived thereof hath gone astray, though he be the author of every righteous deed. It behoveth every one who reacheth this most sublime station, this summit of transcendent glory, to observe every ordinance of Him Who is the Desire of the world. These twin duties are inseparable. Neither is acceptable without the other. Thus hath it been decreed by Him Who is the Source of Divine inspiration.<p>
 		 </td>
 		 <td width="15%" VALIGN=top><hr><small>
-		 ["The first duty..."] <i>Gleanings From The Writings Of Bahá'u'lláh</i> <a href="../GL/p003-346.html#CLV">CLV</a>, <i>The Revelation of Bahá'u'lláh</i>, vol. 2 p. <a href="../../Others/ROB/V2/p171-193Ch08.html#p186">186</a>, vol. 3 p. <a href="../../Others/ROB/V3/p275-307Ch13.html#p292">292</a>
+		 ["The first duty..."] <i>Gleanings From The Writings Of Bahá'u'lláh</i> <a href="../GL/p003-346.html#CLV">CLV</a>, <i>The Revelation of Bahá'u'lláh</i>, vol. 2 p. <a href="../../Others/ROB/V2/p171-193Ch08.html#p186">186</a>, vol. 3 p. <a href="../../Others/ROB/V3/p275-307Ch13.html#p292">292</a><p>
+		 ["whoso is deprived thereof..."] <i>Some Answered Questions</i>, <a href="../../AB/SAQ/p175-260Part4.html#p238">p.238</a>
+		 
 		 </small></td>
 		 <td width="3%">&nbsp;</td>
 	 </tr>
