--- a/Baha'i/Baha/KA/p258-296Index.html
+++ b/Baha'i/Baha/KA/p258-296Index.html
@@ -85,7 +85,7 @@ Shoghi Effendi, Writings of -- should be Shoghi Effendi, Writings
 	   	   individual works
 	       <blockquote>
 				   <i>Memorials of the Faithful</i>, <a href= "p165-251Notes.html#note183">n183</a><br>
-				   <i>Some Answered Questions</i>, <a href= "p165-251Notes.html#note75">n75</a>, <a href= "p165-251Notes.html#note86">n86</a><br>
+				   <a name="SomeAnsweredQuestions"></a><i>Some Answered Questions</i>, <a href= "p165-251Notes.html#note75">n75</a>, <a href= "p165-251Notes.html#note86">n86</a><br>
 				   Will and Testament of, <a href= "p001-011Intro.html#p3">3</a>, <a href= "p165-251Notes.html#note49">n49</a>, <a href= "p165-251Notes.html#note66">n66</a>, <a href= "p165-251Notes.html#note125">n125</a>, <a href= "p165-251Notes.html#note183">n183</a><br>
 				   not accounted "verses of God," <a href= "p165-251Notes.html#note165">n165</a>
 		   </blockquote>
@@ -102,7 +102,7 @@ Shoghi Effendi, Writings of -- should be Shoghi Effendi, Writings
 	   verse to be said when no water available, <a href= "p019-088Aqdas.html#para10">K10</a>, <a href= "p103-140QA.html#qa51">Q51</a>, <a href= "p165-251Notes.html#note16">n16</a><br>
 	   verse to use when water harmful, <a href= "p103-140QA.html#qa51">Q51</a>, <a href= "p165-251Notes.html#note34">n34</a><br>
 	   </blockquote>
-	   Abraham, <a href= "p165-251Notes.html#note65">n65</a><br>
+	   <a name="Abraham">Abraham</a>, <a href= "p165-251Notes.html#note65">n65</a><br>
 	   <a name="Abrogationoflawsandpractices"/>Abrogation of laws and practices, <a href= "p001-011Intro.html#p4">4</a>, <a href= "p001-011Intro.html#p8">8</a>, <a href= "p141-164Synopsis.html#p159">159</a>, <i>see also</i> <a href="p258-296Index.html#Bayánlaws">Bayán, laws</a><br>
 	   Absolution of sins, <a href= "p019-088Aqdas.html#para34">K34</a>, <a href= "p165-251Notes.html#note58">n58</a><br>
 	   <a name="Abuseforbidden"></a>Abuse forbidden
