--- a/Baha'i/Baha/KI/p001-094.html
+++ b/Baha'i/Baha/KI/p001-094.html
@@ -165,7 +165,9 @@
 	Later, the beauty of the countenance of the Friend of God <sup><small>1</small></sup> appeared from behind the veil, and another standard of divine guidance was hoisted. He invited the people of the earth to the light of righteousness. The more passionately He exhorted them, the fiercer waxed the envy and waywardness of the people, except those who wholly detached themselves from all save God, and ascended on the wings of certainty to the station which God hath exalted beyond the comprehension of men. It is well known what a host of enemies besieged Him, until at last the fires of envy and rebellion were kindled against Him. <a name="p11"/>And after the episode of the fire came to pass, He, the lamp of God amongst men, was, as recorded in all books and chronicles, expelled from His city. 
 	</td>
 	<td VALIGN=top><small>
-	1. Abraham.
+	1. <span style="background-color: #ffffCC" TITLE="See Genesis 11-25; Some Answered Ouestions, pp. 14-16. Scholars give 2100 B.C.-2000 B.C. as his dates. Regarded by Jews, Christians, and Muslims as the Friend of God, the Father of the Faithful.">Abraham.</span>
+	<hr>
+	[Abraham] <i>Some Answered Questions</i>, <a href="../../AB/SAQ/p001-080Part1.html#p12">p. 12</a>
 	</small></td>
 	<td VALIGN=bottom><small><center><DIV TITLE="Page number location is approximate">11</DIV></center><p></small></td>
 </tr>
@@ -255,10 +257,11 @@
 </tr>
 <tr>
 	<td rowspan="2"><a name="para21"></a>
-	Every discerning observer will recognize that in the Dispensation of the Qur'án both the Book and the Cause of Jesus were confirmed. As to the matter of names, Muhammad, Himself, declared: "I <a name="p21"/>am Jesus." He recognized the truth of the signs, prophecies, and words of Jesus, and testified that they were all of God. In this sense, neither the person of Jesus nor His writings hath differed from that of Muhammad and of His holy Book, inasmuch as both have championed the Cause of God, uttered His praise, and revealed His commandments. Thus it is that Jesus, Himself, declared: "I go away and come again unto you." Consider the sun. Were it to say now, "I am the sun of yesterday," it would speak the truth. And should it, bearing the sequence of time in mind, claim to be other than that sun, it still would speak the truth. In like manner, if it be said that all the days are but one and the same, it is correct and true. And if it be said, with respect to their particular names and designations, that they differ, that again is true. For though they are the same, yet one doth recognize in each a separate designation, a specific attribute, a particular character. Conceive accordingly the distinction, variation, and unity characteristic of the various Manifestations of holiness, that thou mayest comprehend the allusions made by the creator of all names and attributes to the mysteries of distinction and unity, and discover the answer to thy question as to why <a name="p22"/>that everlasting Beauty should have, at sundry times, called Himself by different names and titles.
+	Every discerning observer will recognize that in the Dispensation of the Qur'án both the Book and the Cause of Jesus were confirmed. As to the matter of names, <span style="background-color: #ffffCC" TITLE="The Prophet of Islám and Revealer of the Qur'án. Born August A.D. 570. Declared His Mission A.D. 613. Fled to Medina A.D. 622. See Some Answered Questions, pp. 22-29. Foretold by Moses, Deut. 18:15; by St. John the Divine, Rev. 11 (see Some Answered Questions, p. 53 ff.).">Muhammad</span>, Himself, declared: "I <a name="p21"/>am Jesus." He recognized the truth of the signs, prophecies, and words of Jesus, and testified that they were all of God. In this sense, neither the person of Jesus nor His writings hath differed from that of Muhammad and of His holy Book, inasmuch as both have championed the Cause of God, uttered His praise, and revealed His commandments. Thus it is that Jesus, Himself, declared: "I go away and come again unto you." Consider the sun. Were it to say now, "I am the sun of yesterday," it would speak the truth. And should it, bearing the sequence of time in mind, claim to be other than that sun, it still would speak the truth. In like manner, if it be said that all the days are but one and the same, it is correct and true. And if it be said, with respect to their particular names and designations, that they differ, that again is true. For though they are the same, yet one doth recognize in each a separate designation, a specific attribute, a particular character. Conceive accordingly the distinction, variation, and unity characteristic of the various Manifestations of holiness, that thou mayest comprehend the allusions made by the creator of all names and attributes to the mysteries of distinction and unity, and discover the answer to thy question as to why <a name="p22"/>that everlasting Beauty should have, at sundry times, called Himself by different names and titles.
 	</td>
 	<td VALIGN=top rowspan="2"><small>
-	&nbsp;
+	<hr>
+	[Muhammad] <i>Some Answered Questions</i>, <a href="../../AB/SAQ/p307-324Index.html#Muhammad">index</a>
 	</small></td>
 	<td VALIGN=top><small><center><DIV TITLE="Page number location is approximate">21</DIV></center></small><p></td>
 </tr>
@@ -449,12 +452,13 @@
 </tr>
 <tr>
 	<td><a name="para39"></a>
-	In another sense, by the terms 'sun', 'moon', and 'stars' are meant such laws and teachings as have been established and proclaimed in every Dispensation, such as the laws of prayer and fasting. These have, according to the law of the Qur'án, been regarded, when the beauty of the Prophet Muhammad had passed beyond the veil, as the most fundamental and binding laws of His dispensation. To this testify the texts of the <span style="background-color: #ffffCC" TITLE="The authoritative record of inspired sayings and acts of the Prophet, in addition to the revelation contained in the Qur'án">traditions</span> and chronicles, which, on account of their being widely <a name="p39"/>known, need not be referred to here. Nay rather, in every Dispensation the law concerning prayer hath been emphasized and universally enforced. To this testify the recorded traditions ascribed to the lights that have emanated from the Day-star of Truth, the essence of the Prophet Muhammad.
+	In another sense, by the terms 'sun', 'moon', and 'stars' are meant such laws and teachings as have been established and proclaimed in every Dispensation, such as the laws of prayer and fasting. These have, according to the law of the Qur'án, been regarded, when the beauty of the Prophet <span style="background-color: #ffffCC" TITLE="The Prophet of Islám and Revealer of the Qur'án. Born August A.D. 570. Declared His Mission A.D. 613. Fled to Medina A.D. 622. See Some Answered Questions, pp. 22-29. Foretold by Moses, Deut. 18:15; by St. John the Divine, Rev. 11 (see Some Answered Questions, p. 53 ff.).">Muhammad</span> had passed beyond the veil, as the most fundamental and binding laws of His dispensation. To this testify the texts of the <span style="background-color: #ffffCC" TITLE="The authoritative record of inspired sayings and acts of the Prophet, in addition to the revelation contained in the Qur'án">traditions</span> and chronicles, which, on account of their being widely <a name="p39"/>known, need not be referred to here. Nay rather, in every Dispensation the law concerning prayer hath been emphasized and universally enforced. To this testify the recorded traditions ascribed to the lights that have emanated from the Day-star of Truth, the essence of the Prophet Muhammad.
 	</td>
 	<td VALIGN=top><small>
 	<hr>
 	["In another sense..."] <i>The Revelation of Bahá'u'lláh</i> vol. 1 <a href="../../Others/ROB/V1/p153-197Ch10.html#p168">p. 168</a><p>
-	[Fast] <a href="../KA/p258-296Index.html#Fasting"><i>The Kitáb-i-Aqdas</i></a>; <i>Tablets of Bahá'u'lláh</i>, <a href="../TOB/p001-270TOB.html#para313">p. 109</a>; <a href="../PM/Index.html#Fast"><i>Prayers and Meditations</i></a>; <a href="../GL/Index.html#Fast"><i>Gleanings From The Writings Of Bahá'u'lláh</i></a>; <i>The Revelation of Bahá'u'lláh</i>, vol. 2 <a href="../../Others/ROB/V2/p397-421Ch19.html#p397">p. 397</a>, <a href="../../Others/ROB/V3/p467-483Index.html#Fasting">vol. 3</a>, vol. 4 <a href="../../Others/ROB/V4/p001-010Ch01.html#p9">p. 9</a>
+	[Fast] <a href="../KA/p258-296Index.html#Fasting"><i>The Kitáb-i-Aqdas</i></a>; <i>Tablets of Bahá'u'lláh</i>, <a href="../TOB/p001-270TOB.html#para313">p. 109</a>; <a href="../PM/Index.html#Fast"><i>Prayers and Meditations</i></a>; <a href="../GL/Index.html#Fast"><i>Gleanings From The Writings Of Bahá'u'lláh</i></a>; <i>The Revelation of Bahá'u'lláh</i>, vol. 2 <a href="../../Others/ROB/V2/p397-421Ch19.html#p397">p. 397</a>, <a href="../../Others/ROB/V3/p467-483Index.html#Fasting">vol. 3</a>, vol. 4 <a href="../../Others/ROB/V4/p001-010Ch01.html#p9">p. 9</a><p>
+	[Muhammad] <i>Some Answered Questions</i>, <a href="../../AB/SAQ/p307-324Index.html#Muhammad">index</a>
 	</small></td>
 	<td VALIGN=middle><small><center><DIV TITLE="Page number location is approximate">39</DIV></center><p></small></td>
 </tr>
@@ -749,10 +753,11 @@
 </tr>
 <tr>
 	<td><a name="para68"></a>
-	Among the Prophets was Abraham, the Friend of God. Ere He manifested Himself, <span style="background-color: #ffffCC" TITLE="In Muhammadan commentaries represented as the persecutor of Abraham">Nimrod</span> dreamed a dream. Thereupon, he summoned the soothsayers, who informed him of the rise of a star in the heaven. Likewise, there appeared a herald <a name="p63"/>who announced throughout the land the coming of Abraham. 
+	Among the Prophets was <span style="background-color: #ffffCC" TITLE="See Genesis 11-25; Some Answered Ouestions, pp. 14-16. Scholars give 2100 B.C.-2000 B.C. as his dates. Regarded by Jews, Christians, and Muslims as the Friend of God, the Father of the Faithful.">Abraham</span>, the Friend of God. Ere He manifested Himself, <span style="background-color: #ffffCC" TITLE="In Muhammadan commentaries represented as the persecutor of Abraham">Nimrod</span> dreamed a dream. Thereupon, he summoned the soothsayers, who informed him of the rise of a star in the heaven. Likewise, there appeared a herald <a name="p63"/>who announced throughout the land the coming of Abraham. 
 	</td>
 	<td VALIGN=top><small>
-	&nbsp;
+	<hr>
+	[Abraham] <i>Some Answered Questions</i>, <a href="../../AB/SAQ/p001-080Part1.html#p12">p. 12</a>
 	</small></td>
 	<td VALIGN=bottom><small><center><DIV TITLE="Page number location is approximate">63</DIV></center><p></small></td>
 </tr>
@@ -788,11 +793,13 @@
 </tr>
 <tr>
 	<td><a name="para72"></a>
-	Likewise, ere the beauty of Muhammad was unveiled, the signs of the visible heaven were made manifest. As to the signs of the invisible heaven, there appeared four men who successively announced unto the people the joyful tidings of the rise of that divine Luminary. <span style="background-color: #ffffCC" TITLE="A Persian who embraced Christianity and being told a Prophet was about to arise in Arabia journeyed thither and meeting Muhammad at Koba in His flight to Medina recognized His station and became a Muslim">Rúz-bih</span>, later named Salmán, was honoured by being in their service. As the end of one of these approached, he would send Rúz-bih unto the other, until the fourth who, feeling his death to be nigh, addressed Rúz-bih saying: "O Rúz-bih! when thou hast taken up my body and buried it, go to <span style="background-color: #ffffCC" TITLE="A region in southwestern Arabia which may be considered the holy land of the Muslims since it contains the sacred cities of Medina and Mecca and many other places connected with the history of Muhammad.">Hijáz</span> for there the Day-star of Muhammad will arise. Happy art thou, for thou shalt behold His face!" 
+	Likewise, ere the beauty of <span style="background-color: #ffffCC" TITLE="The Prophet of Islám and Revealer of the Qur'án. Born August A.D. 570. Declared His Mission A.D. 613. Fled to Medina A.D. 622. See Some Answered Questions, pp. 22-29. Foretold by Moses, Deut. 18:15; by St. John the Divine, Rev. 11 (see Some Answered Questions, p. 53 ff.).">Muhammad</span> was unveiled, the signs of the visible heaven were made manifest. As to the signs of the invisible heaven, there appeared four men who successively announced unto the people the joyful tidings of the rise of that divine Luminary. <span style="background-color: #ffffCC" TITLE="A Persian who embraced Christianity and being told a Prophet was about to arise in Arabia journeyed thither and meeting Muhammad at Koba in His flight to Medina recognized His station and became a Muslim">Rúz-bih</span>, later named Salmán, was honoured by being in their service. As the end of one of these approached, he would send Rúz-bih unto the other, until the fourth who, feeling his death to be nigh, addressed Rúz-bih saying: "O Rúz-bih! when thou hast taken up my body and buried it, go to <span style="background-color: #ffffCC" TITLE="A region in southwestern Arabia which may be considered the holy land of the Muslims since it contains the sacred cities of Medina and Mecca and many other places connected with the history of Muhammad.">Hijáz</span> for there the Day-star of Muhammad will arise. Happy art thou, for thou shalt behold His face!" 
 	</td>
 	<td VALIGN=top><small>
 	<hr>
-	["As to the signs..."] <i>The Revelation of Bahá'u'lláh</i> vol. 1 <a href="../../Others/ROB/V1/p153-197Ch10.html#p169">p. 169</a>
+	["As to the signs..."] <i>The Revelation of Bahá'u'lláh</i> vol. 1 <a href="../../Others/ROB/V1/p153-197Ch10.html#p169">p. 169</a><p>
+	<hr>
+	[Muhammad] <i>Some Answered Questions</i>, <a href="../../AB/SAQ/p307-324Index.html#Muhammad">index</a>	
 	</small></td>
 	<td>&nbsp;</td>
 </tr>
