--- a/Baha'i/Others/ROB/V1/p210-220Ch12.html
+++ b/Baha'i/Others/ROB/V1/p210-220Ch12.html
@@ -94,7 +94,7 @@
 	   </td>
        <td></td>
        <td VALIGN=top><small><center><a name="p214">214</a></center><p>
-	   * See <i>Some Answered Questions</i>, ch. v.
+	   * See <i>Some Answered Questions</i>, <a href="../../../AB/SAQ/p001-080Part1.html#p14">ch. v</a>.
 	   </small></td>
 </tr>
 <tr>
