--- a/Baha'i/Others/ROB/V1/p294-314Ch18.html
+++ b/Baha'i/Others/ROB/V1/p294-314Ch18.html
@@ -269,7 +269,7 @@
        <td VALIGN=top><small><center><a name="p309">309</a></center><p>
 	   * Bahá'u'lláh.<p>
 	   <hr>
-	   19. 'Abdu'l-Bahá, <i>Some Answered Questions</i>, chap. XLI.<p>
+	   19. 'Abdu'l-Bahá, <i>Some Answered Questions</i>, <a href="../../../AB/SAQ/p141-174Part3.html#para51">chap. XLI</a>.<p>
 	   20. Shoghi Effendi, 'The Dispensation of Bahá'u'lláh', included in <i>The World Order of Bahá'u'lláh</i>, p. 111, for the passage quoted.
 	   </small></td>
 </tr>
