--- a/Baha'i/Others/ROB/V1/p337-340Biblio.html
+++ b/Baha'i/Others/ROB/V1/p337-340Biblio.html
@@ -36,7 +36,7 @@
        <td><center><h2>BIBLIOGRPAHY</h2></center><p>
 	   <blockquote>
 	   'Abdu'l-Bahá. <i>Memorials of the Faithful</i>. Translated from the original Persian text and annotated by Marzieh Gail. Wilmette, Illinois: Bahá'í Publishing Trust, 1971.<p>
-	   <blockquote><i>Some Answered Questions</i>. Collected and Translated from the Persian of 'Abdu'l-Bahá by Laura Clifford Barney. London: Kegan Paul, Trench, Trubner & Co. Ltd., 1908. Chicago: Bahá'í Publishing Society, 1918. London: Bahá'í Publishing Trust, 1961. Wilmette, Illinois: Bahá'í Publishing Trust, rev. edn. 1964.<p></blockquote>
+	   <blockquote><a href="../../../AB/SAQ/Cover.html"><i>Some Answered Questions</i></a>. Collected and Translated from the Persian of 'Abdu'l-Bahá by Laura Clifford Barney. London: Kegan Paul, Trench, Trubner & Co. Ltd., 1908. Chicago: Bahá'í Publishing Society, 1918. London: Bahá'í Publishing Trust, 1961. Wilmette, Illinois: Bahá'í Publishing Trust, rev. edn. 1964.<p></blockquote>
 	   AFRÚKHTIH, DR. YÚNIS KHÁN. <i>Khátirát-i-Nuh-Sáliy-i-'Akká</i>. Memories of Nine Years in 'Akká. Written in the year 99 B.E. (A.D. 1942). Tihrán.<p>
 	   <i>Áhang-i-Badí'</i>. Persian Bahá'í Youth Magazine. Tihrán: National Bahá'í Youth Committee, 126 B.E. (A.D. 1969).<p>
 	   <i>Bahá'í News and Reviews</i>. Journal of the National Spiritual Assembly of the Bahá'ís of Írán. Tihrán.<p>
